[package]
name = "aori"
version = "0.1.0"
edition = "2021"
default-run = "aori"

[dependencies]
aori_types = { path = "../types" }
aori_requests = { path = "../requests" }

ethers = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-primitives = { workspace = true }
serde_json = { workspace = true }
serde =  { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
eyre = { workspace = true }
