[package]
name = "aori_types"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-primitives = { workspace = true }
serde_json = { workspace = true }
serde =  { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
eyre = { workspace = true }
once_cell = "1.17.1"